cluster-scope/admission/mutatingwebhooks.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: prometheus
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: kube-prometheus-stack-admission
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 81.5.0
      chart: kube-prometheus-stack-81.5.0
      heritage: Helm
      release: prometheus
    name: prometheus-kube-prometheus-admission
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkVENDQVJ1Z0F3SUJBZ0lRTWo5T2MvTDNyNW5LenRsSUFJQTdPVEFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEkyTURJd05EQTBOVGsxTkZvWUR6SXhNall3TVRFeE1EUTFPVFUwV2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRW1lbFhTNnFSCkZ3MVZtY0tKanpTOElwdmpPcHo3WWZZaTU3dDMxUGExOUQvVFBVZGJveTR3aDFJN1Q2ZDdMeVJWWDFWMncrWm0KYmhya2wzUDc2TE9XUHFOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0Ex [...]
      service:
        name: prometheus-kube-prometheus-operator
        namespace: monitoring
        path: /admission-prometheusrules/mutate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: prometheusrulemutate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
