cluster-scope/admission/validatingwebhooks.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: ingress
      meta.helm.sh/release-namespace: ingress-nginx
    labels:
      app.kubernetes.io/component: admission-webhook
      app.kubernetes.io/instance: ingress
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/version: 1.14.3
      helm.sh/chart: ingress-nginx-4.14.3
    name: ingress-ingress-nginx-admission
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkekNDQVJ5Z0F3SUJBZ0lSQUpGZ0V4NVJFajR0Nk1McEROczJDQmN3Q2dZSUtvWkl6ajBFQXdJd0R6RU4KTUFzR0ExVUVDaE1FYm1sc01UQWdGdzB5TmpBeU1EWXdORFU1TXpWYUdBOHlNVEkyTURFeE16QTBOVGt6TlZvdwpEekVOTUFzR0ExVUVDaE1FYm1sc01UQlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJQUmRCeDdsCitXYkJxWGVCdktkOEFtam5DR0dtYUx1WUkyaWlhdXNQUk01M2ZtdlRudmFreG91U2FTeG1OT3VLR0ZCSW9hdm8KdXlkY0VNWTFZZXc3eEkyalZ6QlZNQTRHQTFVZER3RUIvd1FFQXdJQ0JEQVRCZ05WSFNVRUREQUtCZ2dyQmdFRgpCUWNEQVRBUEJn [...]
      service:
        name: ingress-ingress-nginx-controller-admission
        namespace: ingress-nginx
        path: /networking/v1/ingresses
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.nginx.ingress.kubernetes.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: prometheus
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: kube-prometheus-stack-admission
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 81.5.0
      chart: kube-prometheus-stack-81.5.0
      heritage: Helm
      release: prometheus
    name: prometheus-kube-prometheus-admission
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkVENDQVJ1Z0F3SUJBZ0lRTWo5T2MvTDNyNW5LenRsSUFJQTdPVEFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEkyTURJd05EQTBOVGsxTkZvWUR6SXhNall3TVRFeE1EUTFPVFUwV2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRW1lbFhTNnFSCkZ3MVZtY0tKanpTOElwdmpPcHo3WWZZaTU3dDMxUGExOUQvVFBVZGJveTR3aDFJN1Q2ZDdMeVJWWDFWMncrWm0KYmhya2wzUDc2TE9XUHFOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0Ex [...]
      service:
        name: prometheus-kube-prometheus-operator
        namespace: monitoring
        path: /admission-prometheusrules/validate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: prometheusrulevalidate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkVENDQVJ1Z0F3SUJBZ0lRTWo5T2MvTDNyNW5LenRsSUFJQTdPVEFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEkyTURJd05EQTBOVGsxTkZvWUR6SXhNall3TVRFeE1EUTFPVFUwV2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRW1lbFhTNnFSCkZ3MVZtY0tKanpTOElwdmpPcHo3WWZZaTU3dDMxUGExOUQvVFBVZGJveTR3aDFJN1Q2ZDdMeVJWWDFWMncrWm0KYmhya2wzUDc2TE9XUHFOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0Ex [...]
      service:
        name: prometheus-kube-prometheus-operator
        namespace: monitoring
        path: /admission-alertmanagerconfigs/validate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: alertmanagerconfigsvalidate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - alertmanagerconfigs
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
